# nut

./: Cargo.toml  README.md  flake.nix
macros/: Cargo.toml
src/: lib.rs
src/model/: linear.rs  mod.rs
src/tensor/: mod.rs  nda.rs
